# whispermlx-asr-service

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SETUP_GUIDE.md  entrypoint.sh  pyproject.toml  test-api.sh
.github/workflows/: publish.yml
app/: __init__.py  main.py  metrics.py  openai_compat.py  pipeline.py  queue.py  schemas.py  serve_app.py  serve_deployments.py  version.py
tests/: stress_test.py  test_hotwords.sh  test_keep_alive.sh  test_v0_3_2.sh
tests/integration/: conftest.py  test_diarization.py  test_transcription.py
tests/unit/: conftest.py  test_asr_diarization.py  test_asr_endpoint.py  test_asr_output_formats_errors.py  test_config_cleanup.py  test_diarization_segment_resplit.py  test_eviction_loaded_models.py  test_health_queue_concurrency.py  test_metrics.py  test_models_endpoint.py  test_openai_transcriptions.py  test_openai_translations.py  test_openai_validation_envelope.py  test_pipeline_diarize.py  test_pipeline_transcribe.py
