[project]
name = "whispermlx-asr-service"
version = "0.3.2"
description = "Native Apple-Silicon ASR service powered by whispermlx (MLX) with FastAPI"
requires-python = ">=3.13,<3.14"
license = "MIT"
dependencies = [
    "whispermlx",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "pydantic",
    "prometheus-client",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "commitizen",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # FastAPI requires File()/Form() calls in argument defaults
    "B904",  # raise ... from err/None — acceptable in HTTP error handlers
    "E402",  # module-level import not at top — intentional for filterwarnings + circular imports
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast unit tests (whispermlx mocked, no model downloads)",
    "slow: slow integration tests (live app + small model + audio fixture)",
]
